--- a/LaboC#1/ProjectEcole1/ProjectLibraryClass.csproj
+++ b/LaboC#1/ProjectEcole1/ProjectLibraryClass.csproj
@@ -5,9 +5,9 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{455EA3E7-0238-43A0-9D4D-BBEB416F5086}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>ProjectEcole1</RootNamespace>
-    <AssemblyName>ProjectEcole1</AssemblyName>
+    <OutputType>Library</OutputType>
+    <RootNamespace>ProjectLibraryClass</RootNamespace>
+    <AssemblyName>ProjectLibraryClass</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -31,6 +31,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MathUtil, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -56,7 +59,6 @@
     <Compile Include="POI.cs" />
     <Compile Include="Polygon.cs" />
     <Compile Include="Polyline.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
